--- a/generic.html
+++ b/generic.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1>More about me</h1>
+						<h1><strong>More about me</strong></h1>
 					</header>
 
 				<!-- Main -->
@@ -31,13 +31,13 @@
 								<h2><strong>Education</strong></h2>
 								<div class="education">
 									<ul>
-									<li><p><strong>Bachelor of Engineering - Electronics and Communication Engineering (2022-2026)</strong>
+									<li><p><strong>Bachelor of Engineering - Electronics and Communication Engineering (2022-2026)</strong>  -  Grade : 8.78
 										<div class="college-name"><i>Kongu Engineering College, Perundurai</i></div>
 									</p></li>
-									<li><p><strong>Higher Secondary School - 2022</strong>
+									<li><p><strong>Higher Secondary School - 2022</strong>  - 92.8%
 										<div class="college-name"><i>Kongu National Matric Hr Sec School, Nanjanapuram</i></div>
 									</p></li>
-									<li><p><strong>Secondary School - 2020</strong>
+									<li><p><strong>Secondary School - 2020</strong>  - 92.3%
 										<div class="college-name"><i>Kongu National Matric Hr Sec School, Nanjanapuram</i></div>
 									</p></li>
 								</ul>
@@ -58,7 +58,8 @@
 									<li>
 										<span class="image"><img src="images/Cert2.jpg" alt="Unity Certificate" width="400" height="300"/></span>
 										<div class="inner">
-											<h3>Unity Game Development</h3>
+											<h3>Unity Game Development
+											</h3>
 											<p>Issued by: Udemy</p>
 											<a href="https://www.udemy.com/certificate/UC-de611297-b49f-40bd-9c7f-9406537c6b75/" class="button" target="_blank">View Certificate</a>
 										</div>
@@ -66,19 +67,22 @@
 								</ul>
 							</section>
 
+							<section id="clubs" class="main">
+								<h2><strong>Association and Clubs</strong></h2>
+								<ul class="clubs">
+									<li><span class="club-name">ECE Association</span> - <span class="club-role">Executive member</span></li>
+									<li><span class="club-name">Rotaract Club</span> - <span class="club-role">Member</span></li>
+								</ul>
+							</section>							
+
 							<section id="content" class="main">
 								<h2><strong>Languages</strong></h2>
-								<ul style="padding-left: 100px;">
-									<li>
-										<h3>English</h3>
-									</li>
-									<li>
-										<h3>Tamil</h3>
-									</li>
-									<li>
-										<h3>Japanese (Basic)</h3>
-									</li>
+								<ul class="languages">
+									<li>English</li>
+									<li>Tamil</li>
+									<li>Japanese</li>
 								</ul>
+								
 							</section>
 
 					</div>
@@ -90,8 +94,8 @@
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/lokeshwarank/" class="icon brands fa-linkedin alt" target="_blank"><span class="label">LinkedIn</span></a></li>
 							<li><a href="https://github.com/LokiGameDev" class="icon brands fa-github alt"  target="_blank"><span class="label">GitHub</span></a></li>
-							<li><a href="https://www.instagram.com/l._loki_.l/" class="icon brands fa-instagram alt" target="_blank"><span class="label">Instagram</span></a></li>
 							<li><a href="https://lokidevtamil.itch.io/" class="icon brands fa-itch-io alt" target="_blank"><span class="label">Itchio</span></a></li>
+							<li><a href="https://www.instagram.com/l._loki_.l/" class="icon brands fa-instagram alt" target="_blank"><span class="label">Instagram</span></a></li>
 						</ul>
 					</section>
 					<section>
