--- a/index.html
+++ b/index.html
@@ -23,11 +23,12 @@
 							<img src="images/logo.svg" alt="Logo">
 						</span>
 						<h1><b>Hi, I am Lokeshwaran K</b></h1>
-						<p>A self taught Game developer from India<br /></p>
+						<p>A self taught Game developer<br /></p>
 						<p>
 						<i>
 							<a href="https://www.linkedin.com/in/lokeshwarank/" target="_blank">LinkedIn</a> , 
-							<a href="https://github.com/LokiGameDev" target="_blank">GitHub</a>
+							<a href="https://github.com/LokiGameDev" target="_blank">GitHub</a> ,
+							<a href="https://leetcode.com/u/lokeshwarank007/" target="_blank">Leetcode</a>
 						</i>.</p>
 					</header>
 
@@ -49,7 +50,7 @@
 								<div class="spotlight">
 									<div class="content">
 										<header class="major">
-											<h2>Lokeshwaran K</h2>
+											<h2><strong>Lokeshwaran K</strong></h2>
 										</header>
 										<p>Hi,  
 											I am currently studying Electronics and Communication Engineering (ECE) in college. 
@@ -64,29 +65,37 @@
 						<!-- First Section -->
 							<section id="first" class="main special">
 								<header class="major">
-									<h2>Skills</h2>
-									<h3>Softwares Known</h3>
+									<h2><strong>Skills</strong></h2>
 								</header>
-								<ul class="features">
+								<h3>Softwares</h3>
+								<ul class="skills">
 									<li>
-										<span class="image"><img src="images/picUL.png" alt="" width="50" height="55"/></span>
-										<h3>Unity</h3>
+										<img src="images/picUL.png" alt="Unity">
+										<span>Unity</span>
 									</li>
 									<li>
-										<span class="image"><img src="images/picBL.png" alt="" width="50" height="45"/></span>
-										<h3>Blender</h3>
+										<img src="images/picBL.png" alt="Blender">
+										<span>Blender</span>
 									</li>
 									<li>
-										<span class="image"><img src="images/picKL.png" alt="" width="50" height="45"/></span>
-										<h3>Krita</h3>
+										<img src="images/picKL.png" alt="Krita">
+										<span>Krita</span>
 									</li>
 								</ul>
+								<h3>Languages</h3>
+								<ul class="skills">
+									<li>
+										<img src="images/picCS.png" alt="C#">
+										<span>C#</span>
+									</li>
+								</ul>
+								
 							</section>
 
 						<!-- Second Section -->
 							<section id="second" class="main special">
 								<header class="major">
-									<h2>Projects</h2>
+									<h2><strong>Projects</strong></h2>
 									<p>You can look into my projects shown below<br /></p>
 								</header>
 								<ul class="projects">
@@ -103,9 +112,9 @@
 						<!-- Get Started -->
 							<section id="cta" class="main special">
 								<header class="major">
-									<h2>More about me</h2>
+									<h2><strong>More about me</strong></h2>
 								</header>
-								<p>For my educational and aditional information click below</p>
+								<p><h3>For my educational and aditional information click below</h3></p>
 								<footer class="major">
 									<ul class="actions special">
 										<li><a href="generic.html" class="button primary">About me</a></li>
