--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 										<span class="image"><img src="images/picLIT.jpg" alt="Project 1" width="250" height="150"/></span>
 										<h3><strong>Locked In</strong></h3>
 										<p>A simple horror type maze runner game.</p>
-										<a href="https://github.com/LokiGameDev/Locked-In.git" target="_blank" class="button small">GitHub</a>
+										<a href="https://github.com/LokiGameDev/Locked-In-Game" target="_blank" class="button small">GitHub</a>
 										<a href="https://lokidevtamil.itch.io/locked-in" target="_blank" class="button small">Itchio</a>
 									</li>
 								</ul>
