--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 											I have a strong passion for game development and am always learning new skills 
 											to create fun and interactive games. My goal is to improve my abilities and 
 											make exciting games in the future.</p>
-										<a href="images/Lokeshwaran_K_Resume.pdf" download class="button primary">Download Resume</a>
+										<a class="button primary" href="images/Lokeshwaran K Resume.pdf" download>Download Resume</a>
 									</div>
 									<span class="image"><img src="images/picME.jpg" alt="" /></span>
 								</div>
