--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 							<img src="images/logo.svg" alt="Logo">
 						</span>
 						<h1 id="typing-text"></h1>
-						<p>A self taught Game developer<br /></p>
+						<p>Unity Game developer<br /></p>
 						<p>
 						<i>
 							<a href="https://www.linkedin.com/in/lokeshwarank/" target="_blank">LinkedIn</a> , 
