--- a/generic.html
+++ b/generic.html
@@ -1,12 +1,8 @@
 <!DOCTYPE HTML>
-<!--
-	Stellar by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
-		<title>Generic - Stellar by HTML5 UP</title>
+		<link rel="icon" type="image/x-icon" href="images/favicon.ico">
+		<title>More about me</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -209,9 +205,9 @@
 							<section id="clubs" class="main">
 								<h2><strong>Association and Clubs</strong></h2>
 								<ul class="clubs">
-									<li><span class="club-name">ECE Association</span> - <span class="club-role">Executive member</span></li>
-									<li><span class="club-name">Rotaract Club</span> - <span class="club-role">Member</span></li>
-									<li><span class="club-name">ECE</span> - <span class="club-role">Project Coordinator (My class)</span></li>
+									<li><span class="club-name">ECE</span>&nbsp;-<span class="club-role">&nbsp;Project Coordinator (My class)</span><span class="club-time"><i>2025 - Present</i></span></li>
+									<li><span class="club-name">ECE Association</span>&nbsp;-<span class="club-role">&nbsp;Executive member</span><span class="club-time"><i>2024 - Present</i></span></li>
+									<li><span class="club-name">Rotaract Club</span>&nbsp;-<span class="club-role">&nbsp;Member</span><span class="club-time"><i>2023 - Present</i></span></li>
 								</ul>
 							</section>							
 
