--- a/generic.html
+++ b/generic.html
@@ -5,7 +5,7 @@
 		<title>More about me</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/main copy.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
@@ -64,7 +64,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="arrow-button">
+						<a href="index copy.html" class="arrow-button">
 							<img src="images/Prev_Arrow.jpg" alt="Next Page" width="30">
 						</a>
 						
@@ -132,12 +132,12 @@
 										<li>
 											<span class="image"><img src="images/Academic_Cert/Cert3.jpg" onclick="openModal(this)" alt="Hackathon Certificate" /></span>
 											<h3>Ideathon'24 - 2nd Place</h3>
-											<p>Secured second place for our presentation in Ideathon'24 ECE,KEC.</p>
+											<p>Secured second place for our idea in Ideathon'24 ECE,KEC.</p>
 										</li>
 										<li>
 											<span class="image"><img src="images/Academic_Cert/Cert4.jpg" onclick="openModal(this)" alt="Hackathon Certificate" /></span>
 											<h3>Gen AI Hackathon - Top 25</h3>
-											<p>Secured a place in top 25 in a National level hackathon by Intel and KPRIET.</p>
+											<p>Got in top 25 in a National level hackathon by Intel and KPRIET.</p>
 										</li>
 										<li>
 											<span class="image"><img src="images//Academic_Cert/Cert5.jpg" onclick="openModal(this)" alt="Coding Competition Certificate" /></span>
