--- a/generic.html
+++ b/generic.html
@@ -2,10 +2,10 @@
 <html>
 	<head>
 		<link rel="icon" type="image/x-icon" href="images/favicon.ico">
-		<title>More about me</title>
+		<title>Lokeshwaran K</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main copy.css" />
+		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
@@ -64,7 +64,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index copy.html" class="arrow-button">
+						<a href="index.html" class="arrow-button">
 							<img src="images/Prev_Arrow.jpg" alt="Next Page" width="30">
 						</a>
 						
@@ -96,15 +96,16 @@
 								<h2><strong>Certificates</strong></h2>
 								<ul class="projects">
 									<li>
-										<span class="image"><img src="images/Cert1.jpg" alt="Blender Certificate" width="400" height="300"/></span>
+										<span class="image"><img src="images/Cert/Cert1.jpg" alt="Blender Certificate" width="400" height="300"/></span>
 										<div class="inner">
 											<h3>Blender Character Design for Video Games</h3>
+											<br>
 											<p>Issued by: Udemy</p>
 											<a href="https://www.udemy.com/certificate/UC-152534fc-1ace-44b1-8061-4e68303bfb15/" class="button" target="_blank">View Certificate</a>
 										</div>
 									</li>
 									<li>
-										<span class="image"><img src="images/Cert2.jpg" alt="Unity Certificate" width="400" height="300"/></span>
+										<span class="image"><img src="images/Cert/Cert2.jpg" alt="Unity Certificate" width="400" height="300"/></span>
 										<div class="inner">
 											<h3>Unity Game Development</h3>
 											<br>
