--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 										I am doing game development in Unity and learning new skills 
 										to create fun and interactive games. Looking for oppurtunities to work in a team.</p>
 								</div>
-								<span class="image"><img src="images/picME.jpeg" alt="" /></span>
+								<span class="image"><img src="images/picGear.png" alt="Photo"/></span>
 							</div>
 						</section>
 
