--- a/index.html
+++ b/index.html
@@ -101,6 +101,15 @@
 								</header>
 								<ul class="projects">
 									<li>
+										<span class="image"><img src="images/Games/picRB.jpg" alt="Project 3" width="250" height="150"/></span>
+										<h3><strong>Rogue Blade</strong></h3>
+										<p>A top down wave type action game.</p>
+										<br>
+										<a href="rogue-blade.html" class="button small2">More details</a>
+										<a href="https://github.com/LokiGameDev/RogueBlade" target="_blank" class="button small">GitHub</a>
+										<a href="https://lokidevtamil.itch.io/rogue-blade" target="_blank" class="button small">Itchio</a>
+									</li>
+									<li>
 										<span class="image"><img src="images/Games/picLIT.jpg" alt="Project 1" width="250" height="150"/></span>
 										<h3><strong>Locked In</strong></h3>
 										<p>A simple horror type maze runner game.</p>
@@ -108,11 +117,11 @@
 										<a href="https://github.com/LokiGameDev/Locked-In-Game" target="_blank" class="button small">GitHub</a>
 										<a href="https://lokidevtamil.itch.io/locked-in" target="_blank" class="button small">Itchio</a>
 									</li>
-                  <li>
-										<span class="image"><img src="images/Games/picIR.png" alt="Project 1" width="250" height="150"/></span>
+                  					<li>
+										<span class="image"><img src="images/Games/picIR.png" alt="Project 2" width="250" height="150"/></span>
 										<h3><strong>Indie runner</strong></h3>
 										<p>An endless runner game.</p>
-                    <br>
+                    					<br>
 										<a href="Indie-runner.html" class="button small2">More details</a>
 										<a href="https://github.com/LokiGameDev/Locked-In-Game" target="_blank" class="button small">GitHub</a>
 										<a href="https://lokidevtamil.itch.io/locked-in" target="_blank" class="button small">Itchio</a>
