--- a/index.html
+++ b/index.html
@@ -112,7 +112,8 @@
 									<li>
 										<span class="image"><img src="images/Games/picLIT.jpg" alt="Project 1" width="250" height="150"/></span>
 										<h3><strong>Locked In</strong></h3>
-										<p>A simple horror type maze runner game.</p>
+										<p>A simple horror type maze game.</p>
+										<br>
 										<a href="locked-in.html" class="button small2">More details</a>
 										<a href="https://github.com/LokiGameDev/Locked-In-Game" target="_blank" class="button small">GitHub</a>
 										<a href="https://lokidevtamil.itch.io/locked-in" target="_blank" class="button small">Itchio</a>
@@ -166,7 +167,7 @@
 								</header>
 								<footer class="major">
 									<ul class="actions special">
-										<li><a href="generic.html" class="button primary">About me</a></li>
+										<li><a href="more-about.html" class="button primary">About me</a></li>
 									</ul>
 								</footer>
 							</section>
