Fixed some links

--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
 										<p>An endless runner game.</p>
                     					<br>
 										<a href="Indie-runner.html" class="button small2">More details</a>
-										<a href="https://github.com/LokiGameDev/Locked-In-Game" target="_blank" class="button small">GitHub</a>
-										<a href="https://lokidevtamil.itch.io/locked-in" target="_blank" class="button small">Itchio</a>
+										<a href="https://github.com/LokiGameDev/Indie-Runner-Game" target="_blank" class="button small">GitHub</a>
+										<a href="https://lokidevtamil.itch.io/indie-runner" target="_blank" class="button small">Itchio</a>
 									</li>
 								</ul>
 							</section>
