small detail change

--- a/index.html
+++ b/index.html
@@ -188,8 +188,8 @@
 						<section>
 							<h2>Contact me</h2>
 							<dl class="alt">
-								<dt>Address</dt>
-								<dd>13, M.G.T Pudur, Anjurampalayam, Anumapalli(Po), Arachalur(Via), Erode - 638101</dd>
+								<!-- <dt>Address</dt>
+								<dd>13, M.G.T Pudur, Anjurampalayam, Anumapalli(Po), Arachalur(Via), Erode - 638101</dd> -->
 								<dt>Phone</dt>
 								<dd>+91 9597548511</dd>
 								<dt>Email</dt>
