--- a/rogue-blade.html
+++ b/rogue-blade.html
@@ -170,14 +170,12 @@
                         <li><a href="https://www.linkedrogue-blade//lokeshwarank/" class="icon brands fa-linkedin alt" target="_blank"><span class="label">LinkedIn</span></a></li>
                         <li><a href="https://github.com/LokiGameDev" class="icon brands fa-github alt"  target="_blank"><span class="label">GitHub</span></a></li>
                         <li><a href="https://lokidevtamil.itch.io/" class="icon brands fa-itch-io alt" target="_blank"><span class="label">Itchio</span></a></li>
-                        <li><a href="https://www.instagram.com/l._loki_.l/" class="icon brands fa-instagram alt" target="_blank"><span class="label">Instagram</span></a></li>
+                        <!-- <li><a href="https://www.instagram.com/l._loki_.l/" class="icon brands fa-instagram alt" target="_blank"><span class="label">Instagram</span></a></li> -->
                     </ul>
                 </section>
                 <section>
                     <h2>Contact me</h2>
                     <dl class="alt">
-                        <!-- <dt>Address</dt>
-                        <dd>13, M.G.T Pudur, Anjurampalayam, Anumapalli(Po), Arachalur(Via), Erode - 638101</dd> -->
                         <dt>Phone</dt>
                         <dd>+91 9597548511</dd>
                         <dt>Email</dt>
