--- a/index.html
+++ b/index.html
@@ -61,8 +61,7 @@
 						<h4>Unity Game developer</h4>
 						<p>
 							<a href="https://www.linkedin.com/in/lokeshwarank/" target="_blank">LinkedIn</a> , 
-							<a href="https://github.com/LokiGameDev" target="_blank">GitHub</a> ,
-							<a href="https://leetcode.com/u/lokeshwarank007/" target="_blank">Leetcode</a>
+							<a href="https://github.com/LokiGameDev" target="_blank">GitHub</a>
 						</p>
 						<p></br></p>
 						<a class="button primary2" href="images/Lokeshwaran K Resume.pdf" download>Download Resume</a>
@@ -105,27 +104,27 @@
 										<h3><strong>Rogue Blade</strong></h3>
 										<p>A top down wave type action game.</p>
 										<br>
-										<a href="rogue-blade.html" class="button small2">More details</a>
-										<a href="https://github.com/LokiGameDev/RogueBlade" target="_blank" class="button small">GitHub</a>
 										<a href="https://lokidevtamil.itch.io/rogue-blade" target="_blank" class="button small">Itchio</a>
+										<a href="https://github.com/LokiGameDev/RogueBlade" target="_blank" class="button small">GitHub</a>
+										<a href="rogue-blade.html" class="button small2">More details</a>
 									</li>
 									<li>
 										<span class="image"><img src="images/Games/picLIT.jpg" alt="Project 1" width="250" height="150"/></span>
 										<h3><strong>Locked In</strong></h3>
 										<p>A simple horror type maze game.</p>
 										<br>
-										<a href="locked-in.html" class="button small2">More details</a>
-										<a href="https://github.com/LokiGameDev/Locked-In-Game" target="_blank" class="button small">GitHub</a>
 										<a href="https://lokidevtamil.itch.io/locked-in" target="_blank" class="button small">Itchio</a>
+										<a href="https://github.com/LokiGameDev/Locked-In-Game" target="_blank" class="button small">GitHub</a>
+										<a href="locked-in.html" class="button small2">More details</a>
 									</li>
                   					<li>
 										<span class="image"><img src="images/Games/picIR.png" alt="Project 2" width="250" height="150"/></span>
 										<h3><strong>Indie runner</strong></h3>
 										<p>An endless runner game.</p>
                     					<br>
-										<a href="Indie-runner.html" class="button small2">More details</a>
-										<a href="https://github.com/LokiGameDev/Indie-Runner-Game" target="_blank" class="button small">GitHub</a>
 										<a href="https://lokidevtamil.itch.io/indie-runner" target="_blank" class="button small">Itchio</a>
+										<a href="https://github.com/LokiGameDev/Indie-Runner-Game" target="_blank" class="button small">GitHub</a>
+										<a href="Indie-runner.html" class="button small2">More details</a>
 									</li>
 								</ul>
 							</section>
