--- a/more-about.html
+++ b/more-about.html
@@ -216,8 +216,8 @@
 							<section id="clubs" class="main">
 								<h2><strong>Association and Clubs</strong></h2>
 								<ul class="clubs">
+									<li><span class="club-name">ECE Association</span>&nbsp;-<span class="club-role">&nbsp;Secretary</span><span class="club-time"><i>2025 - Present</i></span></li>
 									<li><span class="club-name">ECE</span>&nbsp;-<span class="club-role">&nbsp;Project Coordinator (My class)</span><span class="club-time"><i>2025 - Present</i></span></li>
-									<li><span class="club-name">ECE Association</span>&nbsp;-<span class="club-role">&nbsp;Executive member</span><span class="club-time"><i>2024 - Present</i></span></li>
 									<li><span class="club-name">Rotaract Club</span>&nbsp;-<span class="club-role">&nbsp;Member</span><span class="club-time"><i>2023 - Present</i></span></li>
 								</ul>
 							</section>							
