--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lokeshwaran K - Unity Game Developer</title>
+    <title>Lokeshwaran K</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Tinos&display=swap" rel="stylesheet">
     <style>
@@ -328,7 +328,7 @@
                              <img src="https://img.icons8.com/?size=100&id=A6WwODb5ChNB&format=png&color=ffffff" alt="Krita" class="h-10 w-10 tech-icon" title="Krita" style="filter: invert(0);">
                         </div>
                      <div class="mt-12 fade-in-up" style="animation-delay: 1.1s;">
-                          <button class="action-button text-white font-semibold py-3 px-8 rounded-lg" href="images/Lokeshwaran K Resume.pdf" download>Download Resume</button>
+                          <a href="images/LokeshwaranK_GameDev_Resume.pdf" download class="action-button text-white font-semibold py-3 px-8 rounded-lg inline-block">Download Resume</a>
                      </div>
                     </div>
                 </div>
@@ -539,13 +539,13 @@
                         </div>
                     </div>
                 </div>
-                <div class="reveal md:col-span-2 no-select" style="transition-delay: 0.4s;">
+                <!-- <div class="reveal md:col-span-2 no-select" style="transition-delay: 0.4s;">
                      <h3 class="text-2xl font-bold mb-4 mt-8">Participation</h3>
                      <div class="border border-gray-700 p-6 rounded-lg">
                         <h4 class="text-xl font-semibold">Game Jam or Event Name</h4>
                         <p class="text-gray-400">Description of your participation or achievement.</p>
                      </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
@@ -582,7 +582,7 @@
     </section>
 
     <footer class="text-center p-6 text-gray-500 text-sm no-select">
-        <p>&copy; 2024 Lokeshwaran K.</p>
+        <p>&copy;Lokeshwaran K.</p>
     </footer>
 
     <!-- Video Modal -->
