--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
                         </p>
                     </div>
                     <div class="border border-gray-700 p-6 rounded-lg">
-                        <h4 class="text-xl font-semibold">B.E in Electronics and Communication Engineering</h4>
+                        <h4 class="text-xl font-semibold">Higher Secondary Education</h4>
                         <p class="text-gray-400 flex justify-between items-center">
                             <span>Kongu National Matric Higher Secondary School | 92.3%</span>
                             <span>2022</span>
