--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
             <h2 class="text-4xl md:text-5xl font-bold text-white text-center tracking-tighter reveal no-select">About Me</h2>
             <div class="section-divider reveal"></div>
             <div class="grid grid-cols-1 md:grid-cols-2 gap-12 text-center md:text-left">
-                <div class="reveal col-span-2 space-y-2">
+                <div class="reveal col-span-2 space-y-2 no-select">
                     <h3 class="text-2xl font-bold mb-4">Education</h3>
                     <div class="border border-gray-700 p-6 rounded-lg">
                         <h4 class="text-xl font-semibold">B.E in Electronics and Communication Engineering</h4>
@@ -553,7 +553,7 @@
                         <div class="flex justify-between items-center">
                             <div>
                                 <h4 class="text-xl font-semibold">Unity Game Development</h4>
-                                <p class="text-gray-400">Udemy</p>
+                                <p class="text-gray-400 text-align: left">Udemy</p>
                             </div>
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-gray-500 flex-shrink-0" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
